2009-05-08 Yusei
* Add field library and proxy fields.
* Update dependencies.

2009-04-18 Kazuhiko
* Version 5.4.1

2008-11-13 yusei
* Start to develop version 5.4.

2008-10-14 yusei
* Start to develop version 5.3.

2008-09-24 yusei
* Update xml format.

2008-09-04 yusei
* Update English messages.

2008-08-29 yusei
* Use written English for message.

2008-06-27 yusei
* Start to develop version 5.2.

2008-06-26 yusei
* Revise version to 5.1.

2008-06-19 yusei
* Fixed Document_getPropertyDictFromContent and now it returns only true title metadata.

2008-06-19 romain
* Add missing mime_type base category

2008-06-04 ivan
* Set correct ingestion order

2008-04-17 yusei
* Revise version to 5.0.

2008-03-26 yusei
* Added contribution predicates for both of dms and crm ingestion.

2008-03-25 yusei
* Added Document_findTypeName. This is a configuration script that defines portal type search order.

2008-03-17 yusei
* move Contribution Tool portal type from dms.

2008-03-14 yusei
* move ingestion related stuff from core and dms to this business template.